<resources>

    <string name="facebook_app_id">154263631758550</string>
    <string name="app_name">كم سعر</string>
    <string name="next">التالى</string>
    <string name="welcome_in_app">اهلا بك فى كم سعر!</string>
    <string name="intro_one_description">تعتبر التطبيق الأول من نوعه المختص بالأسعار \n بأمكانك الآن تكوين صوره سريعه قبل شراء المنتج \n والحصول على افضل العروض من البائعين</string>
    <string name="start">أبدأ!</string>
    <string name="add">الأضافة</string>
    <string name="add_your_offer">أضف عرضك الآن</string>
    <string name="intro_two_description"> حابب تبيع منتج تقدر توجه اعلانك للشخص \n المناسب من خلال أضافه العروض</string>
    <string name="intro_three_description"> مستعجل وما عندم وقت تقدر تشوف متوسط \n الاسعار حسب المشاركات والمفاضله بينها</string>
    <string name="intro_four_description">أسال على سعر منتجك المفضل وستحصل على عدد \n من العروض المميزه من قبل البائعين</string>
    <string name="intro_five_description">فقط قم بإضافه عرضك بالسعر المناسب لك \n لتحصل على المزيد من النقاط</string>
    <string name="intro_six_description">يمكنك البحث عن المنتجات التى تم السؤال  \n عنها مسبقا</string>
    <string name="trend">الأكثر تداولا</string>
    <string name="follow_all_new">تابع كل ما هو جديد</string>
    <string name="favourite">المفضلة</string>
    <string name="tutorial_offers">العروض</string>
    <string name="tutorial_share">المشاركة</string>
    <string name="tutorial_search">البحث</string>
    <string name="get_good_offers">أحصل على العروض المميزة</string>
    <string name="share_item">شارك واعرض منتجك</string>
    <string name="search_item">إبحث عن ما تريد</string>
    <string name="login_with_facebook">الدخول باستخدام حساب فيسبوك</string>
    <string name="login_with_twitter">الدخول باستخدام حساب تويتر</string>
    <string name="login_with_google">الدخول باستخدام حساب جوجل</string>
    <string name="or">أو</string>
    <string name="new_account">تسجيل جديد</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_as_visitor"><u>الدخول كزائر!</u></string>
    <string name="user_email">البريد الالكترونى</string>
    <string name="user_password">كلمة المرور</string>
    <string name="login_text">دخول</string>
    <string name="new_account_text"><u>أشتراك جديد</u></string>
    <string name="do_you_have_account">هل لديك حساب؟</string>
    <string name="have_account">هل لديك حساب بالفعل؟</string>
    <string name="text_login"><u>تسجيل الدخول</u></string>
    <string name="create">أنشاء</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="question_title">عنوان السؤال</string>
    <string name="city">مكة المكرمة</string>
    <string name="time">منذ دقيقة</string>
    <string name="ads_title">عنوان الاعلان</string>
    <string name="ads_cost">السعر : 200 ريال</string>
    <string name="category_name">اسم القسم</string>
    <string name="ads_details">تفاصيل الاعلان</string>
    <string name="ads_description">هنا تكون تفاصيل الاعلان بهذ الشكل</string>
    <string name="home">الرئيسيه</string>
    <string name="profile_tab">حسابى</string>
    <string name="ads_tab">الاعلانات</string>
    <string name="most_active">الشائعه</string>
    <string name="no_data">لا يوجد بيانات</string>
    <string name="you_should_login">يجب ان تقوم بتسجيل الدخول اولا</string>
    <string name="my_questions">اسئلتى</string>
    <string name="my_offers">عروضى</string>
    <string name="my_ads">اعلاناتى</string>
    <string name="offer_title">عنوان العرض</string>
    <string name="offers">العروض</string>
    <string name="add_offer">أضافه</string>
    <string name="test_percentage">70%</string>
    <string name="test_price">500 ريال</string>
    <string name="test_answer_number">22 تسعيره</string>
    <string name="statistical">الإحصائيات</string>
    <string name="enter_your_mail">ادخل بريدك الالكترونى لتتمكن من أستعاده كلمة المرور</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="error_empty_email">يجب ان تدخل البريد الالكترونى</string>
    <string name="error_email_format">البريد الالكترونى غير صحيح</string>
    <string name="test_answer_content">هذا هو المحتوي الذى يمكن ان يوضع فى الاجابه يمكن ان يكون سطرين</string>
    <string name="answers">الاجابات</string>
    <string name="title_activity_question_details">QuestionDetailsActivity</string>
    <string name="all_answers">لمشاهدة كل التسعيرات</string>
    <string name="question_details">تفاصيل السؤال</string>
    <string name="answer_comments">التعليقات</string>
    <string name="answer_on_question">أجب عن السؤال</string>
    <string name="send_your_answer">اجب عن السؤال</string>
    <string name="enter_comment">أكتب تعليقك هنا</string>
    <string name="currency">العملة</string>
    <string name="enter_value">القيمة</string>
    <string name="search">Search</string>
    <string name="profile_title">الملف الشخصى</string>
    <string name="notification_title">الاشعارات</string>
    <string name="messages_title">الرسائل</string>
    <string name="message_test">السلام عليكم ورحمه الله</string>
    <string name="send">ارسال</string>
    <string name="write_message">اكتب رسالتك</string>
    <string name="search_word">كلمة البحث</string>
    <string name="choose_category">القسم</string>
    <string name="choose_country">الدولة</string>
    <string name="search_title">بحث</string>
    <string name="user_new_password">كلمة المرور الجديدة</string>
    <string name="user_confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="user_old_password">كلمة المرور القديمة</string>
    <string name="update">حفظ</string>
    <string name="choose_categories">أختر القسم</string>
    <string name="time_out">النت بطئ حاول مره اخرى</string>
    <string name="no_connection">لا يوجد اتصال بالشبكة حاول مره اخرى</string>
    <string name="server_error">خطأ فى الخادم</string>
    <string name="all_categories">كل المجالات</string>
    <string name="enter_your_message">أدخل رسالتك هنا</string>
    <string name="error_empty_message">يجب ان تدخل رسالتك اولا</string>
    <string name="question_share">مشاركة سؤال من تطبيق كم سعر</string>
    <string name="prices_title">تسعيرة</string>
    <string name="enter_report_reason">أدخل سبب البلاغ</string>
    <string name="offer_share">مشاركة عرض من تطبيق كم سعر</string>
    <string name="write_comment">اكتب تعليقك</string>
    <string name="you_should_enter_your_comment">يجب ان تدخل تعليقك</string>
    <string name="you_should_enter_your_message">يجب ان تدخل رسالتك</string>
    <string name="error_empty_password">يجب ان تدخل كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="error_empty_confirm_password">يجب ان تدخل تأكيد كلمة المرور</string>
    <string name="password_not_matched">كلمتا المرور غير متطابقتين</string>
    <string name="error_user_name">يجب ان تدخل اسم المستخدم</string>
    <string name="enter_search_word">يجب ان تدخل كلمة البحث</string>
    <string name="fav_answers">التسعيرات</string>
    <string name="fav_questions">الاسئلة</string>
    <string name="error_in_loading_image">خطأ فى تحميل الصوره</string>
    <string name="how_much">كم سعر</string>
    <string name="country">الدولة</string>
    <string name="test_country">المملكة العربيه السعودية</string>
    <string name="attachment">المرفقات</string>
    <string name="attach_image">ارفق صوره</string>
    <string name="publish_question">انشر السؤال</string>
    <string name="error_in_activity_result">لا تتمكن من اضافه مرفقات</string>
    <string name="added_successfully">تم الاضافه بنجاح</string>
    <string name="create_ask">اضافه سؤال</string>
    <string name="you_should_choose_category">يجب ان تختار القسم</string>
    <string name="you_should_enter_title">يجب ان تدخل عنوان السؤال</string>
    <string name="answer_add_successfully">تم اضافه اجابتك بنجاح</string>
    <string name="consumer_key">n7ZJH7C2Q1A78azZaFkyGZwOv</string>
    <string name="secret_key">dxiQA39B3BhVQTFFMkkLMdrYqDor6p5cPgK39Owygtdoiss4pz</string>
    <string name="complete">أكمال البيانات</string>
    <string name="choose_your_country">أختر الدوله</string>
    <string name="user_bio">نبذة عنك</string>
    <string name="user_phone">رقم الهاتف</string>
    <string name="country_code">الكود</string>
    <string name="add_ad">إضافة اعلان</string>
    <string name="you_should_enter_ad_title">يجب إدخال حقل اسم الاعلان</string>
    <string name="you_should_enter_ad_description">يجب ادخال حقل تفاصيل الاعلان</string>
    <string name="you_should_enter_ad_price">يجب عليك ادخال حقل السعر</string>
    <string name="you_should_enter_ad_mobile">يجب ادخال حقل رقم الجوال</string>
    <string name="you_should_enter_ad_email">يجب ادخال حقل البريد الالكترونى</string>
    <string name="ad_share">مشاركة اعلان من تطبيق كم سعر</string>
    <string name="choose_state">اختر مدينة</string>
    <string name="state">المدينة</string>
    <string name="you_should_choose_state">يجب أن تختار المدينة</string>

    <string-array name="country_arrays">
        <item>السعودية</item>
        <item>مصر</item>
    </string-array>
    <string name="update_profile">تعديل الملف الشخصى</string>
    <string name="update_password">تعديل كلمه المرور</string>
    <string name="settings">الأعدادات</string>
    <string name="user_hashtags">اكتب هنا اهتماماتك (سيارات،جوالات..الخ)</string>
    <string name="hashtag">اهتماماتى</string>
    <string name="user_old_password_incorrect">كلمة المرور القديمة غير صحيحة</string>
    <string name="password_changed_correctly">تم تغيير كلمة المرور بنجاح</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="you_should_add_main_photo">يجب اضافة صورة رئيسية</string>

    <string name="sdk_version" translatable="false">SDK version :</string>
    <string name="android_vesion" translatable="false">Android version :</string>
    <string name="brand" translatable="false">Brand :</string>
    <string name="model" translatable="false">Model :</string>
    <string name="manufacturer" translatable="false">Manufacturer :</string>
    <string name="feedback_email_subject">تواصل مع كم سعر</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="settings_saved_successfully">تم الحفظ بنجاح</string>
    <string name="message_sent_successfully">تم ارسال الرسالة بنجاح</string>
    <string name="edit_ad">تعديل الاعلان</string>
    <string name="edited_successfully">تم التعديل بنجاح</string>
    <string name="change_image">تغيير الصورة</string>
    <string name="edit">تعديل</string>
    <string name="edit_ques">تعديل السؤال</string>
    <string name="image">Image</string>
    <string name="search_here">كلمة البحث</string>
    <string name="my_answers">اجاباتى</string>
</resources>
