<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/question_statistical_oval_background"
            android:gravity="center"
            android:text="@string/test_percentage"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_toLeftOf="@+id/tv_percentage"
            android:layout_toRightOf="@+id/tv_number_of_answer"
            android:gravity="center_vertical|right"
            android:text="@string/test_price"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_number_of_answer"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical|right"
            android:paddingLeft="10dp"
            android:text="@string/test_answer_number"
            android:textColor="@color/colorOffGray"
            android:textSize="12sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lay_footer"
        android:background="@color/colorOffGray" />
</LinearLayout>