<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/person_place_holder" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/iv_user_image"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/question_title"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/clock_icon"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:text="@string/time"
            android:textColor="@color/colorAdsTime"
            android:textSize="8sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/tv_message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_name"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/iv_user_image"
            android:gravity="right"
            android:maxLines="1"
            android:text="@string/test_answer_content"
            android:textColor="@color/colorQuestionBarText"
            android:textSize="11sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />
</LinearLayout>