<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:src="@mipmap/app_logo" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/facebook_button_background_color"
                android:drawableRight="@mipmap/facebook_icon"
                android:drawablePadding="15dp"
                android:gravity="right|center_vertical"

                android:paddingRight="10dp"
                android:text="@string/login_with_facebook"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/face_book_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_twitter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/twitter_button_background_color"
                android:drawableRight="@mipmap/twitter_icon"
                android:drawablePadding="15dp"
                android:gravity="right|center_vertical"

                android:paddingRight="10dp"
                android:text="@string/login_with_twitter"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_google_plus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/google_button_background_color"
                android:drawableRight="@mipmap/google_icon"
                android:drawablePadding="15dp"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:text="@string/login_with_google"
                android:textColor="@color/colorGoogleText"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/or"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/colorWhite" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_create_account"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_button_background"
                    android:text="@string/new_account"
                    android:textColor="@color/colorWhite"

                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_background"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_visitor_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/login_as_visitor"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/main_progress_id"
            style="@style/AVLoadingIndicatorView.Small"
            app:indicatorColor="@color/colorWhite"
            app:indicatorName="BallSpinFadeLoaderIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="30dp"
            android:visibility="gone" />
    </FrameLayout>
</ScrollView>