<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/forgot_password_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_input_border">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/login_icon_background"
            android:padding="9dp"
            android:src="@mipmap/login_password_icon" />

        <EditText
            android:id="@+id/et_user_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_toLeftOf="@+id/password_icon"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/user_old_password"
            android:paddingRight="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_input_border">

        <ImageView
            android:id="@+id/password_icon_new"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/login_icon_background"
            android:padding="9dp"
            android:src="@mipmap/login_password_icon" />

        <EditText
            android:id="@+id/et_user_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_toLeftOf="@+id/password_icon_new"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/user_new_password"
            android:paddingRight="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_input_border">

        <ImageView
            android:id="@+id/confirm_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/login_icon_background"
            android:padding="9dp"
            android:src="@mipmap/login_password_icon" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_toLeftOf="@+id/confirm_password"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/user_confirm_new_password"
            android:paddingRight="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="13sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button_blue_background"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>